adjust line-height/margin-bottom for p.byline to fix names/date overlap

--- a/app/css/article.less
+++ b/app/css/article.less
@@ -64,6 +64,9 @@
          font-weight: 400;
          font-style: normal;
     }
+    h1.article-title {
+         margin-bottom: 3px;
+    }
 
     @media (min-width: 768px) {
       h1 span.glyphicon.glyphicon-expand {
@@ -135,7 +138,8 @@
          font-weight: 300;
          font-style: italic;
          font-size: 15px;
-         line-height: 0px;
+         line-height: 15px;
+         margin-bottom: 25px;
     }
 
     p.bibl {
